# Autobob2

./: .env.example  .gitignore  API_KEYS_TODO.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Makefile  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  execution_engine  go.mod  main.py  main.rs  pytest.ini  quick_deploy.sh  requirements.txt  setup.sh
.github/: copilot-instructions.md
core/: discovery_engine.rs  evolution_ai.py  execution_engine.go  go.mod  mod.rs  risk_manager.rs  run_evolution.py
dashboard/: package.json
dashboard/web/: app.py  dashboard.py
dashboard/web/static/: index.html
database/: schema.sql
infrastructure/: README.md
infrastructure/database/: init.sql  setup_db.py
intelligence/: meta_learner.py  openai_strategist.py  pattern_synthesizer.py  run_openai.py  sentiment_analyzer.py
migrations/: 001_initial_schema.sql
scripts/: init_db.sql
strategies/exchanges/: coinbase_client.py  dex_client.py  flashbots_client.py  kraken_client.py
tests/: paper_trading.py  test_discovery.py  test_evolution.py  test_risk.py  test_system.py  validate_autonomy.py
